correction bloc page agence seo alignement et taille en hauteur

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -336,10 +336,10 @@ footer {
     display:flex;
     flex-direction:column;
     align-items:center;
-    justify-content:center;
+    justify-content:start;
     border-radius:15px;
     border-color: rgb(212, 212, 212);
-    min-height:520px;
+    min-height:620px;
     // max-height:500px;
     flex-wrap: wrap;
     width:24%;
